objects/Listing_Lottery_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Available_Units__c</fullName>
        <label>Available Units</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Defaults to the related preference description, but is editable to allow users to override if needed.</description>
        <inlineHelpText>Leave blank to use the standard description from the preference.</inlineHelpText>
        <label>Description for this listing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <description>The listing for this object</description>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Listing Preferences</relationshipLabel>
        <relationshipName>Listing_Lottery_Preferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lottery_Preference__c</fullName>
        <label>Preference</label>
        <referenceTo>Lottery_Preference__c</referenceTo>
        <relationshipLabel>Listing Preferences</relationshipLabel>
        <relationshipName>Listing_Lottery_Preferences</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NRHP_District__c</fullName>
        <label>NRHP District</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this Preference is true, then its parent is also true</description>
        <label>Parent Preference</label>
        <referenceTo>Listing_Lottery_Preference__c</referenceTo>
        <relationshipLabel>Listing Preferences</relationshipLabel>
        <relationshipName>Listing_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preference_Name__c</fullName>
        <formula>Lottery_Preference__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preference Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Read_More_URL__c</fullName>
        <formula>Lottery_Preference__r.Read_More_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read More URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Submitted_Apps__c</fullName>
        <label>Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Listing Preference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Available_Units__c</columns>
        <columns>Description__c</columns>
        <columns>Listing__c</columns>
        <columns>Order__c</columns>
        <columns>NRHP_District__c</columns>
        <columns>Lottery_Preference__c</columns>
        <columns>Preference_Name__c</columns>
        <columns>Total_Submitted_Apps__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LP-{00000}</displayFormat>
        <label>Listing Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listing Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>